@Pageable, Page, bootstrap th pagination

--- a/src/main/resources/templates/header_nav.html
+++ b/src/main/resources/templates/header_nav.html
@@ -30,9 +30,7 @@
 						      <li><a class="dropdown-item" href="/item/list.do">아이템리스트</a></li>
 						      <li><a class="dropdown-item" href="/item/queryList.do">아이템리스트(@Quey JPQL})</a></li>
 						      <li><a class="dropdown-item" href="/item/entityGraphList.do">아이템리스트(@EntityGraph Real join)</a></li>
-						      <li><a class="dropdown-item" href="/item/quertEntityGraphList.do">아이템리스트(@query @EntityGraph)</a></li>
-
-
+						      <li><a class="dropdown-item" href="/item/list/1">아이템리스트(Pageable sort)</a></li>
 						      <li><hr class="dropdown-divider"></li>
 						      <li><a class="dropdown-item" href="#">Separated link</a></li>
 						    </ul>
