--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<htmllang="ko" xmlns:th="http:/www.thymeleaf.org">
+<htmllang="ko" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta carset="UTF-8">
 	</head>
