--- a/src/main/resources/templates/item/list.html
+++ b/src/main/resources/templates/item/list.html
@@ -47,7 +47,7 @@
 					<td>
 						<span th:text="${item.cateNum}"></span>
 						(<span th:text="${item.category?.name}"></span>)
-						(<span th:text="${item.category?.sub}"></span>)
+						(<span th:text="${item.category?.cateNum}"></span>)
 					</td>
 				</tr>		
 			</tbody>
