--- a/src/main/resources/templates/item/queryList.html
+++ b/src/main/resources/templates/item/queryList.html
@@ -30,7 +30,7 @@
 					</td>
 					<td>
 						(<span th:text="${entitis[2]?.name}"></span>)
-						(<span th:text="${entitis[2]?.sub}"></span>)
+						(<span th:text="${entitis[2]?.cateNum}"></span>)
 					</td>
 				</tr>		
 			</tbody>
