item basket ManyToOne

--- a/src/main/resources/templates/header_nav.html
+++ b/src/main/resources/templates/header_nav.html
@@ -45,9 +45,14 @@
 						(<span th:text="${session.memVo?.name}"></span>)
 						님 로그인 
 						&nbsp;/&nbsp;
+						<a 	href="/itemBasket/list.do">
+							장바구니
+						</a>
+						&nbsp;/&nbsp;
 						<a 	href="/mem/logout">
 							로그아웃
 						</a>
+
 					</div>
 	 				<div class="d-flex" th:if="!${session.memVo}">
 						<a 	href="/mem/login">
