--- a/src/main/resources/templates/header_nav.html
+++ b/src/main/resources/templates/header_nav.html
@@ -47,6 +47,7 @@
 						&nbsp;/&nbsp;
 						<a 	href="/itemBasket/list.do">
 							장바구니
+							(<strong th:text=${session.basketCount}> </strong>)
 						</a>
 						&nbsp;/&nbsp;
 						<a 	href="/mem/logout">
