item_basket update delete

--- a/src/main/resources/templates/itemBasket/list.html
+++ b/src/main/resources/templates/itemBasket/list.html
@@ -34,7 +34,37 @@
 						(<span th:text="${basket.item.category?.name}"></span>)
 						(<span th:text="${basket.item.category?.cateNum}"></span>)
 					</td>
-					<td th:text="${basket.count}"></td>
+					<td>
+						<form action="/itemBasket/update.do" method="post">
+							<input type="hidden" name="basketNum" th:value="${basket.basketNum}">
+							<input type="hidden" name="memberId" th:value="${basket.memberId}">
+							<input type="hidden" name="itemNum" th:value="${basket.itemNum}">
+
+
+							<div class="input-group">
+							  <select class="form-select" name="count">
+							  	<th:block th:each="count:${#numbers.sequence(basket.count+10,1)}">
+							    	<option  th:selected="(${count}==${basket.count})" th:value="${count}" th:text="${count}"></option>
+							  	</th:block>
+							    	
+							  </select>
+							  <button class="btn btn-outline-info">수정</button>
+
+							</div>
+						</form>
+					</td>
+					<td>
+ 						<form action="/itemBasket/delete.do" method="post">
+
+							<div class="input-group mb-3">
+							  <div class="input-group-text">
+							    <input class="form-check-input mt-0" type="checkbox" name="basketNum" th:value="${basket.basketNum}">
+							  </div>
+							  <button class="form-control btn btn-outline-danger">삭제</button>
+							</div>
+						</form>
+
+					</td>
 				</tr>		
 		</tbody>
 		</table>
