--- a/src/main/resources/templates/mem/signup.html
+++ b/src/main/resources/templates/mem/signup.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<!--정적파일 위치인 static도 root경로로 인지-->
-		<script src="/js/mem/signup.js" defer="defer">
+		<script src="/public/js/mem/signup.js" defer="defer">
 		
 		</script>
 	</head>
