--- a/src/main/resources/templates/header_nav.html
+++ b/src/main/resources/templates/header_nav.html
@@ -14,7 +14,7 @@
 				<div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class=nav-link href="/mem/list.do">
+							<a class=nav-link href="/mem/admin/list.do">
 								멤버리스트(관리)
 							</a>
 						</li>
