--- a/src/main/resources/templates/mem/login.html
+++ b/src/main/resources/templates/mem/login.html
@@ -10,13 +10,13 @@
 				  <div class="mb-3 row">
 				    <label for="staticEmail" class="col-sm-2 col-form-label">아이디</label>
 				    <div class="col-sm-10">
-				      <input type="text" class="form-control" id="staticEmail"  name="id">
+				      <input type="text" class="form-control" id="staticEmail"  name="id" value="admin">
 				    </div>
 				  </div>
 				  <div class="mb-3 row">
 				    <label for="inputPassword" class="col-sm-2 col-form-label">패스워드</label>
 				    <div class="col-sm-10">
-				      <input type="password" name="pw" class="form-control" id="inputPassword">
+				      <input type="password" name="pw" class="form-control" id="inputPassword" value="admin1234">
 				    </div>
 				  </div>
 			  	  <div class="col-12">
