파일 업로드 및 썸네일 생성

--- a/src/main/resources/templates/header_nav.html
+++ b/src/main/resources/templates/header_nav.html
@@ -32,7 +32,7 @@
 						      <li><a class="dropdown-item" href="/item/entityGraphList.do">아이템리스트(@EntityGraph Real join)</a></li>
 						      <li><a class="dropdown-item" href="/item/list/1">아이템리스트(Pageable sort)</a></li>
 						      <li><hr class="dropdown-divider"></li>
-						      <li><a class="dropdown-item" href="#">Separated link</a></li>
+						      <li><a class="dropdown-item" href="/item/seller/insert.do">아이템 등록</a></li>
 						    </ul>
 						  </li>					  
 					</ul>
